--- a/apps/demo-coordinatorlayout/src/main/res/layout/activity_collapsing_toolbar.xml
+++ b/apps/demo-coordinatorlayout/src/main/res/layout/activity_collapsing_toolbar.xml
@@ -13,14 +13,29 @@
         android:minHeight="0dp"
         app:liftOnScrollTargetViewId="@+id/rv_recyclerview">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/ctl_collapsing"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="#50ff0000"
-            android:minHeight="30dp"
-            app:layout_scrollFlags="scroll|snap|enterAlways"
-            app:title="ToolBar"></com.google.android.material.appbar.MaterialToolbar>
+            android:layout_height="wrap_content"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:src="@mipmap/cover_01"
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.7" />
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="#50ff0000"
+                app:layout_collapseMode="pin"
+                app:title="ToolBar" />
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
