--- a/apps/demo-coordinatorlayout/src/main/res/layout/activity_collapsing_toolbar.xml
+++ b/apps/demo-coordinatorlayout/src/main/res/layout/activity_collapsing_toolbar.xml
@@ -14,7 +14,7 @@
         app:liftOnScrollTargetViewId="@+id/rv_recyclerview">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/ctl_collapsing"
+            android:id="@+id/collapsing_Toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
@@ -22,8 +22,8 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:src="@mipmap/cover_01"
                 android:scaleType="centerCrop"
+                android:src="@mipmap/cover_01"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7" />
 
@@ -31,7 +31,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="#50ff0000"
+                android:background="#20ff0000"
                 app:layout_collapseMode="pin"
                 app:title="ToolBar" />
 
