--- a/apps/demo-coordinatorlayout/src/main/res/layout/activity_basic_coordinator_layout.xml
+++ b/apps/demo-coordinatorlayout/src/main/res/layout/activity_basic_coordinator_layout.xml
@@ -33,6 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
+            android:textSize="26dp"
             android:text="@string/large_text" />
 
     </androidx.core.widget.NestedScrollView>
