--- a/apps/demo-coordinatorlayout/src/main/res/layout/fragment_scrolling.xml
+++ b/apps/demo-coordinatorlayout/src/main/res/layout/fragment_scrolling.xml
@@ -8,22 +8,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_title"
-            android:textAppearance="?attr/textAppearanceTitleLarge"
-            android:layout_margin="@dimen/text_margin"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/text_margin"
+            android:textAppearance="?attr/textAppearanceTitleLarge" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
-            android:text="@string/large_text" />
+            android:text="@string/large_text"
+            android:textSize="26dp" />
 
     </LinearLayout>
 
-   </androidx.core.widget.NestedScrollView>
+</androidx.core.widget.NestedScrollView>
